fixes uneven participants page.

--- a/public/stylesheets/participants.css
+++ b/public/stylesheets/participants.css
@@ -27,6 +27,7 @@ body#participants .player_list ul li {
 	border-left: 1px #FFF solid;
 	border-right: 2px #FFF solid;
 	position: relative;
+	width: 200px;
 }
 
 body#participants .player_list ul li:hover {
